--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ServerGames"
-        tools:targetApi="31" >
+        tools:targetApi="31"
+        android:usesCleartextTraffic="true">
         <!--<activity
             android:name=".ui.login.LoginActivity"
             android:exported="false"
@@ -32,6 +33,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".View.ContentActivity" />
+
 
     </application>
 
